--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
       <li class="hidden mr-24 snap-center md:flex">
         <div class="w-[10vw] md:w-[30vw] h-[100px] md:h-[450px]"></div>
       </li>
-      <li class="mr-4 ml-9 md:mr-12 snap-center md:ml-0">
+      <li class="ml-2 mr-4 md:mr-12 snap-center md:ml-0">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="flex" href="./helzi/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
