--- a/about/index.html
+++ b/about/index.html
@@ -15,24 +15,18 @@
       theme: {
         extend: {
           keyframes: {
-            'curtain-top': {
-              '0%': { transform: 'scaleY(1)' },
-              '100%': { transform: 'scaleY(0)' },
-            },
-            'slide-x': {
-              '0%': { transform: 'scaleX(0)', marginLeft: 0, opacity: 1 },
-              '50%': { transform: 'scaleX(1)', marginLeft: 0, opacity: 1 },
-              '100%': { transform: 'scaleY(0)', marginLeft: '100px', opacity: 1 },
-            },
-            'spin-reverse': {
+            'rotate-hamburguer': {
               'from': { transform: 'rotate(0deg)' },
-              'to': { transform: 'rotate(360deg)' },
+              'to': { transform: 'rotate(45deg) translate(1px, -4px)' },
             },
+            'rotate-hamburguer-inverse': {
+              'from': { transform: 'rotate(0deg) translate(0, 0)' },
+              'to': { transform: 'rotate(-45deg) translate(-2px, -1px)' },
+            }
           },
           animation: {
-            'curtain-top': 'curtain-top 0.6s cubic-bezier(.70,0,.35,1) 3s forwards',
-            'slide-x': 'slide-x 1s cubic-bezier(.70,0,.35,1) infinite',
-            'spin-reverse': 'spin-reverse 10s linear infinite reverse'
+            'rotate-hamburguer': 'rotate-hamburguer 0.2s cubic-bezier(.70,0,.35,1) forwards',
+            'rotate-hamburguer-inverse': 'rotate-hamburguer-inverse 0.2s cubic-bezier(.70,0,.35,1) forwards'
           }
         }
       }
@@ -41,15 +35,28 @@
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
-    <h1><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <nav role="navigation" class="invisible md:visible">
+    <h1 class="z-[45]"><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
+    <nav role="navigation" class="hidden md:flex">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects/" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-base no-underline font-regular border-b border-[#1446E7] mx-6 text-[#1446E7]" href="../about/" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
+    <nav class="md:hidden" role="navigation">
+      <div class="flex flex-col items-center justify-center w-[40px] h-[32px]">
+        <input class="w-[40px] h-[32px] absolute cursor-pointer z-[42] opacity-0 peer" type="checkbox" />
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-top-left peer-checked:animate-rotate-hamburguer"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] my-1.5 bg-slate-400 flex peer-checked:animate-rotate-hamburguer-inverse"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-[0%_100%] origin-top transform-all peer-checked:opacity-0"></span>
+        <div class="fixed inset-0 bg-[#dfdfdf] shadow-xl top-0 flex flex-col translate-x-[-120%] duration-500 items-center justify-center transition-all peer-checked:translate-x-0">
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
+          <a class="text-base no-underline font-regular text-2xl my-12 border-b border-[#1446E7] text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+        </div>
+      </div>
+    </nav>
   </header>
   <section class="flex flex-col items-center justify-center flex-1 w-screen h-screen overflow-hidden">
-    <div class="fixed w-[85vw] md:w-[65vw] flex flex-col z-10 mt-[-60px]">
+    <div class="fixed w-[85vw] md:w-[65vw] flex flex-col z-[1] mt-[-60px]">
       <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] mb-10 font-semibold" style="font-family: Inter, sans-serif;">Hello! I'm Matias Bejas, a <span class="border-b border-[#1446E7] text-[#1446E7]">Designgineer</span> from Argentina currently living in <span class="border-b border-[#1446E7] text-[#1446E7]">Madrid</span> working as <span class="border-b border-[#1446E7] text-[#1446E7]">Design Lead</span>.</p>
       <p class="text-[25px] md:text-[55px] leading-tight text-[#39474E] ml-16 font-semibold" style="font-family: Inter, sans-serif;">With 20+ years of experience I specialize in <span class="border-b border-[#1446E7] text-[#1446E7]">interface design</span>, <span class="border-b border-[#1446E7] text-[#1446E7]">UX/UI</span>, <span class="border-b border-[#1446E7] text-[#1446E7]">holistic design systems</span> & <span class="border-b border-[#1446E7] text-[#1446E7]">front-end/back-end development</span>.</p>
     </div>
