--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <title>Matias Bejas - Design Lead - UX/UI Expert</title>
   <style>
     .no-scrollbar::-webkit-scrollbar {
@@ -20,34 +21,6 @@
       scrollbar-width: none;
     }
   </style>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          keyframes: {
-            'curtain-top': {
-              '0%': { transform: 'scaleY(1)' },
-              '100%': { transform: 'scaleY(0)' },
-            },
-            'slide-x': {
-              '0%': { transform: 'scaleX(0)', marginLeft: 0, opacity: 1 },
-              '50%': { transform: 'scaleX(1)', marginLeft: 0, opacity: 1 },
-              '100%': { transform: 'scaleY(0)', marginLeft: '100px', opacity: 1 },
-            },
-            'spin-reverse': {
-              'from': { transform: 'rotate(0deg)' },
-              'to': { transform: 'rotate(360deg)' },
-            },
-          },
-          animation: {
-            'curtain-top': 'curtain-top 0.6s cubic-bezier(.70,0,.35,1) 3s forwards',
-            'slide-x': 'slide-x 1s cubic-bezier(.70,0,.35,1) infinite',
-            'spin-reverse': 'spin-reverse 10s linear infinite reverse'
-          }
-        }
-      }
-    }
-  </script>
 </head>
 <body class="absolute inset-0 flex justify-center md:w-screen md:h-screen md:relative md:inset-auto" style="background-color: #DFDFDF;">
   <div class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-top origin-top">
@@ -57,16 +30,29 @@
     </div>
   </div>
   <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
-    <h1><a href="/"><img src="./assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <nav role="navigation" class="invisible md:visible">
+    <h1 class="z-[45]"><a href="/"><img src="./assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
+    <nav role="navigation" class="hidden md:flex">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
+    <nav class="md:hidden" role="navigation">
+      <div class="flex flex-col items-center justify-center w-[40px] h-[32px]">
+        <input class="w-[40px] h-[32px] absolute cursor-pointer z-[42] opacity-0 peer" type="checkbox" />
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-top-left peer-checked:animate-rotate-hamburguer"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] my-1.5 bg-slate-400 flex peer-checked:animate-rotate-hamburguer-inverse"></span>
+        <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-[0%_100%] origin-top transform-all peer-checked:opacity-0"></span>
+        <div class="fixed inset-0 bg-[#dfdfdf] shadow-xl top-0 flex flex-col translate-x-[-120%] duration-500 items-center justify-center transition-all peer-checked:translate-x-0">
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl my-12 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
+        </div>
+      </div>
+    </nav>
   </header>
   <section class="flex flex-col items-center justify-center">
     <div class="relative">
-      <div class="absolute inset-2/4 ml-[-35px] md:ml-[-50px] mt-[-37px] md:mt-[-55px] z-[40] w-[70px] md:w-[100px] h-[35px] md:h-[50px]">
+      <div class="absolute inset-2/4 ml-[-35px] md:ml-[-50px] mt-[-37px] md:mt-[-55px] z-[3] w-[70px] md:w-[100px] h-[35px] md:h-[50px]">
         <svg class="w-full" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://web.resource.org/cc/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
           version="1.1"
           baseProfile="full"
@@ -134,10 +120,10 @@
         </g>
         </svg>
       </div>
-      <img class="absolute top-2 md:top-0 -right-1 md:right-0 z-20 animate-spin-reverse w-[90px] md:w-[127px]" src="assets/available.svg" alt="Matmac - Available for freelance and contract work" />
-      <img class="relative z-10 mt-10 w-[200px] h-[200px] md:w-[300px] md:h-[300px]" src="assets/matmacintosh.png" alt="Matmac Portfolio"/>
+      <img class="absolute top-2 md:top-0 -right-1 md:right-0 z-[2] animate-spin-reverse w-[90px] md:w-[127px]" src="assets/available.svg" alt="Matmac - Available for freelance and contract work" />
+      <img class="relative z-[1] mt-10 w-[200px] h-[200px] md:w-[300px] md:h-[300px]" src="assets/matmacintosh.png" alt="Matmac Portfolio"/>
     </div>
-    <h2 class="max-w-[85vw] md:max-w-[50vw] text-center mt-[-28px] md:mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold text-[32px] md:text-[70px]" style="font-family: Inter, sans-serif;">I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
+    <h2 class="max-w-[85vw] md:max-w-[50vw] text-center mt-[-28px] md:mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold text-[32px] md:text-[70px] ml" style="font-family: Inter, sans-serif;">I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
     <h3 class="max-w-[85vw] md:max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] md:text-[20px] sm:text-[20px] font-regular" style="font-family: Inter, sans-serif;">I help industry leaders & startups create remarkable user-driven experiences</h3>
   </section>
   <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
@@ -153,5 +139,60 @@
       </span>
     </div>
   </footer>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          keyframes: {
+            'curtain-top': {
+              '0%': { transform: 'scaleY(1)' },
+              '100%': { transform: 'scaleY(0)' },
+            },
+            'slide-x': {
+              '0%': { transform: 'scaleX(0)', marginLeft: 0, opacity: 1 },
+              '50%': { transform: 'scaleX(1)', marginLeft: 0, opacity: 1 },
+              '100%': { transform: 'scaleY(0)', marginLeft: '100px', opacity: 1 },
+            },
+            'spin-reverse': {
+              'from': { transform: 'rotate(0deg)' },
+              'to': { transform: 'rotate(360deg)' },
+            },
+            'rotate-hamburguer': {
+              'from': { transform: 'rotate(0deg)' },
+              'to': { transform: 'rotate(45deg) translate(1px, -4px)' },
+            },
+            'rotate-hamburguer-inverse': {
+              'from': { transform: 'rotate(0deg) translate(0, 0)' },
+              'to': { transform: 'rotate(-45deg) translate(-2px, -1px)' },
+            }
+          },
+          animation: {
+            'curtain-top': 'curtain-top 0.6s cubic-bezier(.70,0,.35,1) 3s forwards',
+            'slide-x': 'slide-x 1s cubic-bezier(.70,0,.35,1) infinite',
+            'spin-reverse': 'spin-reverse 10s linear infinite reverse',
+            'rotate-hamburguer': 'rotate-hamburguer 0.2s cubic-bezier(.70,0,.35,1) forwards',
+            'rotate-hamburguer-inverse': 'rotate-hamburguer-inverse 0.2s cubic-bezier(.70,0,.35,1) forwards'
+          }
+        }
+      }
+    }
+    // Wrap every letter in a span
+    // var textWrapper = document.querySelector('.ml');
+    // textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='inline-block'>$&</span>");
+
+    // function animateText() {
+    //   anime.timeline({loop: false})
+    //     .add({
+    //       targets: '.ml .inline-block',
+    //       translateY: [100,0],
+    //       translateZ: 0,
+    //       opacity: [0,1],
+    //       easing: "easeOutExpo",
+    //       duration: 1400,
+    //       delay: (el, i) => 300 + 30 * i
+    //     })
+    // }
+    // setTimeout(animateText, 2900);
+  </script>
 </body>
 </html>
