--- a/projects/helzi/index.html
+++ b/projects/helzi/index.html
@@ -20,7 +20,7 @@
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
   </header>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fq0kan3jZ1fNHzxcd69WeBT%2FPortfolio-Helzi%3Fpage-id%3D0%253A1%26node-id%3D2%253A105%26viewport%3D241%252C48%252C0.68%26scaling%3Dmin-zoom%26starting-point-node-id%3D2%253A105%26hide-ui%3D1" allowfullscreen></iframe>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fq0kan3jZ1fNHzxcd69WeBT%2FMatmac---Helzi%3Fpage-id%3D0%253A1%26node-id%3D2%253A105%26viewport%3D241%252C48%252C1%26scaling%3Dmin-zoom%26starting-point-node-id%3D2%253A105%26hide-ui%3D1" allowfullscreen></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
