--- a/projects/sony/index.html
+++ b/projects/sony/index.html
@@ -20,7 +20,7 @@
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
   </header>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FfPOEuw9HcxSlBc35O11Dbc%2FPortfolio-Sony%3Fpage-id%3D0%253A1%26node-id%3D1%253A2%26viewport%3D241%252C48%252C0.13%26scaling%3Dmin-zoom%26hide-ui%3D1" allowfullscreen></iframe>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/proto/fPOEuw9HcxSlBc35O11Dbc/Matmac---Sony?page-id=0%3A1&node-id=1%3A2&viewport=241%2C48%2C2&scaling=min-zoom%26hide-ui%3D1" allowfullscreen></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
