finish projects tempalte

--- a/projects/index.html
+++ b/projects/index.html
@@ -52,57 +52,64 @@
       <li class="ml-2 mr-4 md:mr-12 snap-center md:ml-0">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]" data-tilt>
-            <a class="flex hidden md:flex" href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
-            <a class="flex md:hidden" href="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fq0kan3jZ1fNHzxcd69WeBT%2FMatmac---Helzi%3Fnode-id%3D0%253A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
+            <a class="hidden md:flex" href="./helzi/"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/q0kan3jZ1fNHzxcd69WeBT/Matmac---Helzi?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <a class="flex" href="./amazon/"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
+            <a class="hidden md:flex" href="./amazon/"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/amazon.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <a class="flex" href="./linkedin/"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
+            <a class="hidden md:flex" href="./linkedin/"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/haTt89jgwaNtXlckUNBOfV/Matmac---Linkedin?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/linkedin.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <a class="flex" href="./sony/"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
+            <a class="hidden md:flex" href="./sony/"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/fPOEuw9HcxSlBc35O11Dbc/Matmac---Sony?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/sony.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project">
+            <a class="hidden md:flex" href="./posters/"><img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/NlxvdMWTjb3xzLO6vjYNoJ/Matmac---Posters?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/posters.jpg" alt="Posters project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project">
+            <a class="hidden md:flex" href="./flow/"><img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/NlxvdMWTjb3xzLO6vjYNoJ/Matmac---Posters?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/flow.jpg" alt="Flow project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project">
+            <a class="hidden md:flex" href="./holafly/"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/d5xE3bQnPSkxgGFMTsqUfm/Matmac---Holafly?node-id=1%3A157" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/holafly.jpg" alt="Holafly project"></a>
           </div>
         </div>
       </li>
       <li class="mr-4 md:mr-12 snap-center">
         <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
           <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
-            <img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project">
+            <a class="hidden md:flex" href="./tradenolimits/"><img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project"></a>
+            <a class="flex md:hidden" href="https://www.figma.com/file/SZMUHUBvNUBuIkDmB2oiVO/Matmac---Tradenolimits?node-id=0%3A1" target="_blank"><img class="object-cover object-left-top" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project"></a>
           </div>
         </div>
       </li>
@@ -147,9 +154,9 @@
     }
     VanillaTilt.init(document.querySelectorAll('.rounded-lg'), {
       scale: 1.05,
-      speed: 2000,
+      speed: 3000,
       max: 25,
-      perspective: 2000,
+      perspective: 4000,
     });
   </script>
 </body>
