--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Matias Bejas - Design Lead - UX/UI Expert</title>
+  <!-- Primary Meta Tags -->
+  <title>Matias Bejas - About</title>
+  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matmac.design">
+  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://matmac.design">
+  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
   <script>
     tailwind.config = {
       theme: {
@@ -75,5 +92,13 @@
       </span>
     </div>
   </footer>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY7BN658HK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FY7BN658HK');
+  </script>
 </body>
 </html>
