--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -34,5 +34,13 @@
       </span>
     </div>
   </footer>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY7BN658HK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FY7BN658HK');
+  </script>
 </body>
 </html>
