--- a/projects/amazon/index.html
+++ b/projects/amazon/index.html
@@ -9,7 +9,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Matmac Portfolio</title>
+  <!-- Primary Meta Tags -->
+  <title>Matias Bejas - Projects - Amazon</title>
+  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matmac.design">
+  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://matmac.design">
+  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
   <script>
     tailwind.config = {
       theme: {
@@ -55,7 +72,7 @@
       </div>
     </nav>
   </header>
-  <iframe class="flex w-screen h-screen border-0" src="https://www.figma.com/proto/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?page-id=0%3A1&node-id=1%3A105&viewport=241%2C48%2C0.25&scaling=min-zoom&starting-point-node-id=1%3A105%26hide-ui%3D1" allowfullscreen></iframe>
+  <iframe class="flex w-screen h-screen border-0" src="https://www.figma.com/proto/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?page-id=0%3A1&node-id=1%3A105&viewport=241%2C48%2C0.44&scaling=min-zoom&starting-point-node-id=1%3A105%26hide-ui%3D1" allowfullscreen></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
@@ -69,5 +86,13 @@
       </span>
     </div>
   </footer>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY7BN658HK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FY7BN658HK');
+  </script>
 </body>
 </html>
