--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="text/javascript" src="../plugins/vanilla-tilt.min.js"></script>
+  <!-- Primary Meta Tags -->
   <title>Matias Bejas - Projects</title>
+  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matmac.design">
+  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://matmac.design">
+  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
   <style>
     .no-scrollbar::-webkit-scrollbar {
       display: none;
@@ -158,6 +175,14 @@
       max: 25,
       perspective: 4000,
     });
+  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FY7BN658HK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FY7BN658HK');
   </script>
 </body>
 </html>
