--- a/projects/amazon/index.html
+++ b/projects/amazon/index.html
@@ -72,7 +72,7 @@
       </div>
     </nav>
   </header>
-  <iframe class="flex w-screen h-screen border-0" src="https://www.figma.com/proto/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?page-id=0%3A1&node-id=1%3A105&viewport=241%2C48%2C0.44&scaling=min-zoom&starting-point-node-id=1%3A105%26hide-ui%3D1" allowfullscreen></iframe>
+  <iframe class="flex w-screen h-screen border-0" src="https://www.figma.com/proto/ArPFw4M97em2USi94Z3MYr/Matmac---Amazon?page-id=0%3A1&node-id=1%3A105&viewport=241%2C48%2C0.44&scaling=min-zoom&starting-point-node-id=1%3A105%26hide-ui%3D1" allowfullscreen allowtransparency="true"></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
