--- a/projects/amazon/index.html
+++ b/projects/amazon/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Primary Meta Tags -->
   <title>Matias Bejas - Projects - Amazon</title>
-  <meta name="title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta name="title" content="Matias Bejas - Projects - Amazon">
   <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
 
   <!-- Open Graph / Facebook -->
