--- a/projects/flow/index.html
+++ b/projects/flow/index.html
@@ -9,7 +9,25 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Matmac Portfolio</title>
+  <title>Matmac - Projects - Flow</title>
+  <!-- Primary Meta Tags -->
+  <title>Matias Bejas - Projects - Flow</title>
+  <meta name="title" content="Matias Bejas - Projects - Flow">
+  <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matmac.design">
+  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://matmac.design">
+  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
@@ -20,7 +38,7 @@
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
   </header>
-  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/proto/fPOEuw9HcxSlBc35O11Dbc/Matmac---Sony?page-id=0%3A1&node-id=1%3A2&viewport=241%2C48%2C2&scaling=min-zoom%26hide-ui%3D1" allowfullscreen></iframe>
+  <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/proto/2r8Lrb4xZDS6yfOwxWbOt4/Matmac---Flow?page-id=0%3A1&node-id=1%3A139&viewport=241%2C48%2C0.42&scaling=min-zoom&starting-point-node-id=1%3A139%26hide-ui%3D1" allowfullscreen allowtransparency="true"></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
       <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
