--- a/projects/helzi/index.html
+++ b/projects/helzi/index.html
@@ -9,7 +9,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Matmac Portfolio</title>
+  <!-- Primary Meta Tags -->
+  <title>Matias Bejas - Projects - Helzi</title>
+  <meta name="title" content="Matias Bejas - Projects - Helzi">
+  <meta name="description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://matmac.design">
+  <meta property="og:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="og:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="og:image" content="https://matmac.design/assets/bg-social-matmac.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://matmac.design">
+  <meta property="twitter:title" content="Matias Bejas - Design Lead - UX/UI Expert">
+  <meta property="twitter:description" content="I help industry leaders, agencies & startups from all over the world create remarkable user-driven experiences.">
+  <meta property="twitter:image" content="https://matmac.design/assets/bg-social-matmac.png">
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
